feat: use variable fonts from fontsources

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -51,7 +51,7 @@ const title = "Blog";
             <div class="content-wrapper">
               <!-- Post -->
               <div class="blog-post">
-                <a href="blog-single">
+                <a href="/blog-single">
                   <!-- Featured image -->
                   <div class="featured-image">
                     <img src="/img/media/post4.svg" alt="" />
@@ -95,7 +95,7 @@ const title = "Blog";
 
               <!-- Post -->
               <div class="blog-post">
-                <a href="blog-single">
+                <a href="/blog-single">
                   <!-- Featured image -->
                   <div class="featured-image">
                     <img src="/img/media/post1.svg" alt="" />
@@ -139,7 +139,7 @@ const title = "Blog";
 
               <!-- Post -->
               <div class="blog-post">
-                <a href="blog-single">
+                <a href="/blog-single">
                   <!-- Featured image -->
                   <div class="featured-image">
                     <img src="/img/media/post5.svg" alt="" />
@@ -183,7 +183,7 @@ const title = "Blog";
 
               <!-- Post -->
               <div class="blog-post">
-                <a href="blog-single">
+                <a href="/blog-single">
                   <!-- Featured image -->
                   <div class="featured-image">
                     <img src="/img/media/post2.svg" alt="" />
@@ -227,7 +227,7 @@ const title = "Blog";
 
               <!-- Post -->
               <div class="blog-post">
-                <a href="blog-single">
+                <a href="/blog-single">
                   <!-- Featured image -->
                   <div class="featured-image">
                     <img src="/img/media/post3.svg" alt="" />
