--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -373,9 +373,9 @@ const title = "Home";
                   :class="{
                     'is-active': activeTab === 'tab-1',
                     '': activeTab != 'tab-1'
-                }"
+                  }"
                 >
-                  <a href="javascript:void(0);">ICO</a>
+                  <a href="#">ICO</a>
                 </div>
                 <div
                   @click="switchTabs($event)"
@@ -386,7 +386,7 @@ const title = "Home";
                     '': activeTab != 'tab-2'
                 }"
                 >
-                  <a href="javascript:void(0);">TOKEN</a>
+                  <a href="#">TOKEN</a>
                 </div>
                 <div
                   @click="switchTabs($event)"
@@ -397,7 +397,7 @@ const title = "Home";
                     '': activeTab != 'tab-3'
                 }"
                 >
-                  <a href="javascript:void(0);">PROFIT</a>
+                  <a href="#">PROFIT</a>
                 </div>
                 <div
                   @click="switchTabs($event)"
@@ -408,7 +408,7 @@ const title = "Home";
                     '': activeTab != 'tab-4'
                 }"
                 >
-                  <a href="javascript:void(0);">BOUNTY</a>
+                  <a href="#">BOUNTY</a>
                 </div>
                 <div class="slider"></div>
               </div>
@@ -438,21 +438,21 @@ const title = "Home";
                           <span>Presale</span>
                           <br />
                           <span class="item-content"
-                            >Presale starts on Apr 8 2021 (9:00am GMT)</span
+                            >Presale starts on Apr 8 2023 (9:00am GMT)</span
                           >
                         </li>
                         <li class="animated preFadeInUp fadeInUp">
                           <span>Sale</span>
                           <br />
                           <span class="item-content"
-                            >Token sales starts on Jun 8 2021 (12:00am GMT)</span
+                            >Token sales starts on Jun 8 2023 (12:00am GMT)</span
                           >
                         </li>
                         <li class="animated preFadeInUp fadeInUp">
                           <span>Bonus</span>
                           <br />
                           <span class="item-content"
-                            >Bonus starts on July 29 2021 (12:00am GMT)</span
+                            >Bonus starts on July 29 2023 (12:00am GMT)</span
                           >
                         </li>
                       </ul>
