--- a/src/pages/token.astro
+++ b/src/pages/token.astro
@@ -33,7 +33,7 @@ const title = "Token";
             <!-- CTA -->
             <p>
               <a
-                href="start"
+                href="/#start"
                 class="button k-button k-primary raised has-gradient is-fat is-bold"
               >
                 <span class="text">More details</span>
@@ -152,7 +152,7 @@ const title = "Token";
                   <div class="document-block has-text-centered">
                     <img src="/img/icons/whitepaper.svg" />
                     <a
-                      href="start"
+                      href="/#start"
                       class="button k-button k-primary raised has-gradient is-bold"
                     >
                       <span class="text">Whitepaper</span>
@@ -165,7 +165,7 @@ const title = "Token";
                   <div class="document-block has-text-centered">
                     <img src="/img/icons/techpaper.svg" />
                     <a
-                      href="start"
+                      href="/#start"
                       class="button k-button k-primary raised has-gradient is-bold"
                     >
                       <span class="text">Techpaper</span>
@@ -178,7 +178,7 @@ const title = "Token";
                   <div class="document-block has-text-centered">
                     <img src="/img/icons/livechat.svg" />
                     <a
-                      href="start"
+                      href="/#start"
                       class="button k-button k-secondary raised has-gradient is-bold"
                     >
                       <span class="text">Live Chat</span>
@@ -271,7 +271,7 @@ const title = "Token";
           <!-- CTA -->
           <div class="cta-wrapper has-text-centered">
             <a
-              href="start"
+              href="/#start"
               class="button k-button k-primary raised has-gradient is-fat is-bold"
             >
               <span class="text">Join the ICO</span>
