--- a/src/styles/layout/_faq.scss
+++ b/src/styles/layout/_faq.scss
@@ -45,7 +45,7 @@ TABLE OF CONTENTS
             padding: 1em;
             display: block;
             color: $white;
-            font-family: 'Cabin', sans-serif;
+            font-family: $font-heading;
             font-weight: 500;
             font-size: .9rem;
             cursor: pointer;
