--- a/src/components/NavbarClone.astro
+++ b/src/components/NavbarClone.astro
@@ -47,19 +47,19 @@
       <div class="navbar-end">
         <!-- Menu item -->
         <div class="navbar-item is-nav-link">
-          <a class="is-centered-responsive" href="token">Token</a>
+          <a class="is-centered-responsive" href="/token">Token</a>
         </div>
         <!-- Menu item -->
         <div class="navbar-item is-nav-link">
-          <a class="is-centered-responsive" href="ico">Ico</a>
+          <a class="is-centered-responsive" href="/ico">Ico</a>
         </div>
         <!-- Menu item -->
         <div class="navbar-item is-nav-link">
-          <a class="is-centered-responsive" href="roadmap">Roadmap</a>
+          <a class="is-centered-responsive" href="/roadmap">Roadmap</a>
         </div>
         <!-- Menu item -->
         <div class="navbar-item is-nav-link">
-          <a class="is-centered-responsive" href="blog">Media</a>
+          <a class="is-centered-responsive" href="/blog">Media</a>
         </div>
         <!-- Menu item -->
         <div class="navbar-item is-nav-link">
