--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,8 +1,11 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
-import Unfont from 'unplugin-fonts/astro/component.astro';
 import Footer from '../components/Footer.astro'
 import BackToTop from '../components/BackToTop.astro'
+
+import '@fontsource-variable/cabin/index.css';
+import '@fontsource-variable/open-sans/index.css';
+
 import 'simplebar/dist/simplebar.min.css'
 import '../styles/main.scss'
 const {title} = Astro.props
@@ -12,7 +15,6 @@ const {title} = Astro.props
 <html dir="ltr" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <Unfont />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Krypton {'- ' + title}</title>
