fix broken navbar-burger

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -17,19 +17,19 @@
       <!-- Responsive toggle -->
       <div class="navbar-burger" @click="openMobileMenu()">
         <div class="menu-toggle">
-          <span
+          <div
             class="icon-box-toggle"
             :class="{
                       'active': mobileOpen,
                       '': !mobileOpen
                   }"
           >
-            <span class="rotate">
+            <div class="rotate">
               <i class="icon-line-top"></i>
               <i class="icon-line-center"></i>
               <i class="icon-line-bottom"></i>
-            </span>
-          </span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
