--- a/src/styles/components/_hamburger.scss
+++ b/src/styles/components/_hamburger.scss
@@ -23,7 +23,7 @@ Hamburger menu icon
         height: 100%;
         width: 100%;
         background: transparent;
-        position: relative;
+        position: absolute;
         top: 3px;
         display: block;
         width: 30px;
