feat: migrate to iconify-icon, update dependencies

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,12 +34,7 @@
             <!-- Field -->
             <div class="control">
               <!-- Special input -->
-              <input
-                class="krypton-subscribe-input"
-                type="email"
-                name="email"
-                placeholder=""
-              />
+              <input class="krypton-subscribe-input" type="email" name="email" placeholder="" />
               <button class="subscribe-button">
                 <span>Subscribe</span>
               </button>
@@ -69,8 +64,7 @@
     <br />
     <!-- Made by -->
     <p class="coded-by">
-      Designed and Coded by <a href="https://cssninja.io" target="_blank"
-        >Css Ninja</a>
+      Designed and Coded by <a href="https://cssninja.io" target="_blank">Css Ninja</a>
     </p>
   </div>
 
