--- a/src/components/BackToTop.astro
+++ b/src/components/BackToTop.astro
@@ -3,19 +3,14 @@
   x-data="initBackToTop()"
   x-init="setup()"
   x-on:scroll.window="scroll()"
-  x-bind:class="{
-        'active-progress': scrolled,
-        '': !scrolled,
-        }"
+  x-bind:class=`{
+    'active-progress': scrolled,
+    '': !scrolled,
+  }`
   x-on:click="scrollTop()"
 >
-  <svg
-    class="progress-circle svg-content"
-    width="100%"
-    height="100%"
-    viewBox="-1 -1 102 102"
-  >
-    <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+  <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+    <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"></path>
   </svg>
 
   <svg
