--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,12 +1,8 @@
 <!-- Static navbar -->
-<nav
-  x-data="initNavbar()"
-  class="navbar is-light"
-  :class="{
-  'is-dark-mobile': mobileOpen,
-  '': !mobileOpen
-}"
->
+<nav x-data="initNavbar()" class="navbar is-light" :class=`{
+    'is-dark-mobile': mobileOpen,
+    '': !mobileOpen
+  }`>
   <div class="container">
     <!-- Brand -->
     <div class="navbar-brand">
@@ -17,13 +13,10 @@
       <!-- Responsive toggle -->
       <div class="navbar-burger" @click="openMobileMenu()">
         <div class="menu-toggle">
-          <span
-            class="icon-box-toggle"
-            :class="{
-                      'active': mobileOpen,
-                      '': !mobileOpen
-                  }"
-          >
+          <span class="icon-box-toggle" :class=`{
+                'active': mobileOpen,
+                '': !mobileOpen
+            }`>
             <span class="rotate">
               <i class="icon-line-top"></i>
               <i class="icon-line-center"></i>
@@ -34,14 +27,10 @@
       </div>
     </div>
     <!-- Menu -->
-    <div
-      id="navbarMenu"
-      class="navbar-menu light-menu"
-      :class="{
+    <div id="navbarMenu" class="navbar-menu light-menu" :class=`{
           'is-active': mobileOpen,
           '': !mobileOpen
-      }"
-    >
+      }`>
       <div class="navbar-end">
         <!-- Menu item -->
         <div class="navbar-item is-nav-link">
@@ -68,10 +57,7 @@
         </div>
         <!-- Sign up -->
         <div class="navbar-item">
-          <a
-            href="#"
-            class="button k-button k-primary raised has-gradient slanted"
-          >
+          <a href="#" class="button k-button k-primary raised has-gradient slanted">
             <span class="text">Register</span>
             <span class="front-gradient"></span>
           </a>
