--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,17 +1,17 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
+import { ViewTransitions } from 'astro:transitions'
 import Footer from '../components/Footer.astro'
 import BackToTop from '../components/BackToTop.astro'
 
-import '@fontsource-variable/cabin/index.css';
-import '@fontsource-variable/open-sans/index.css';
+import '@fontsource-variable/cabin/index.css'
+import '@fontsource-variable/open-sans/index.css'
 
 import 'simplebar/dist/simplebar.min.css'
 import '../styles/main.scss'
-const {title} = Astro.props
+const { title } = Astro.props
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html dir="ltr" lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -21,11 +21,20 @@ const {title} = Astro.props
     <ViewTransitions />
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PV65Z24');</script>
+    <script>
+      ;(function (w, d, s, l, i) {
+        w[l] = w[l] || []
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : ''
+        //@ts-ignore
+        j.async = true
+        //@ts-ignore
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
+        f.parentNode?.insertBefore(j, f)
+      })(window, document, 'script', 'dataLayer', 'GTM-PV65Z24')
+    </script>
     <!-- End Google Tag Manager -->
 
     <link rel="icon" type="image/png" href="/img/favicon.png" />
@@ -33,8 +42,7 @@ const {title} = Astro.props
 
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PV65Z24"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PV65Z24" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <!--page partial-->
@@ -45,7 +53,7 @@ const {title} = Astro.props
 
     <!--Back to top-->
     <BackToTop />
-    
+
     <script src="../js/main"></script>
   </body>
 </html>
