--- a/src/layouts/Minimal.astro
+++ b/src/layouts/Minimal.astro
@@ -1,17 +1,17 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
+import { ViewTransitions } from 'astro:transitions'
 import BackToTop from '../components/BackToTop.astro'
 
-import '@fontsource-variable/cabin/index.css';
-import '@fontsource-variable/open-sans/index.css';
+import '@fontsource-variable/cabin/index.css'
+import '@fontsource-variable/open-sans/index.css'
 
 import 'simplebar/dist/simplebar.min.css'
 import 'plyr/dist/plyr.css'
 import '../styles/main.scss'
-const {title} = Astro.props
+const { title } = Astro.props
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html dir="ltr" lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -24,7 +24,6 @@ const {title} = Astro.props
   </head>
 
   <body>
-
     <!--Body partial-->
     <slot />
 
