--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Default.astro";
-import Navbar from "../components/Navbar.astro";
-import NavbarClone from "../components/NavbarClone.astro";
-const title = "Blog";
+import Layout from '../layouts/Default.astro'
+import Navbar from '../components/Navbar.astro'
+import NavbarClone from '../components/NavbarClone.astro'
+const title = 'Blog'
 ---
 
 <Layout title={title}>
@@ -24,13 +24,8 @@ const title = "Blog";
             <!-- Landing page Title -->
             <div class="column is-5 is-offset-1 landing-caption">
               <div class="divider"></div>
-              <h1 class="title is-1 is-light is-semibold is-spaced main-title">
-                News & Media
-              </h1>
-              <h2 class="subtitle is-6 is-light is-thin">
-                Cryptocurrency brought to the next level. Join our ICO for
-                supercharged rates.
-              </h2>
+              <h1 class="title is-1 is-light is-semibold is-spaced main-title">News & Media</h1>
+              <h2 class="subtitle is-6 is-light is-thin">Cryptocurrency brought to the next level. Join our ICO for supercharged rates.</h2>
             </div>
             <!-- Hero image -->
             <div class="column is-6">
@@ -59,14 +54,9 @@ const title = "Blog";
                   <!-- Content -->
                   <div class="content">
                     <div class="post-title">
-                      Featured on Coinative <span class="blog-date"
-                        >02.06.2020</span>
+                      Featured on Coinative <span class="blog-date">02.06.2020</span>
                     </div>
-                    <p>
-                      Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır
-                      metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının
-                      bir hurufat numune kitabı...
-                    </p>
+                    <p>Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı...</p>
                     <!-- Meta -->
                     <div class="post-meta">
                       <div class="author-block">
@@ -80,11 +70,11 @@ const title = "Blog";
                       </div>
                       <div class="stats-block">
                         <div class="comments">
-                          <i class="iconify" data-icon="lucide:message-circle"></i>
+                          <iconify-icon class="iconify" icon="lucide:message-circle"></iconify-icon>
                           <span>0</span>
                         </div>
                         <div class="likes">
-                          <i class="iconify" data-icon="lucide:heart"></i>
+                          <iconify-icon class="iconify" icon="lucide:heart"></iconify-icon>
                           <span>39</span>
                         </div>
                       </div>
@@ -103,14 +93,9 @@ const title = "Blog";
                   <!-- Content -->
                   <div class="content">
                     <div class="post-title">
-                      Blockchain for dummies <span class="blog-date"
-                        >27.05.2020</span>
+                      Blockchain for dummies <span class="blog-date">27.05.2020</span>
                     </div>
-                    <p>
-                      Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır
-                      metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının
-                      bir hurufat numune kitabı...
-                    </p>
+                    <p>Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı...</p>
                     <!-- Meta -->
                     <div class="post-meta">
                       <div class="author-block">
@@ -124,11 +109,11 @@ const title = "Blog";
                       </div>
                       <div class="stats-block">
                         <div class="comments">
-                          <i class="iconify" data-icon="lucide:message-circle"></i>
+                          <iconify-icon class="iconify" icon="lucide:message-circle"></iconify-icon>
                           <span>0</span>
                         </div>
                         <div class="likes">
-                          <i class="iconify" data-icon="lucide:heart"></i>
+                          <iconify-icon class="iconify" icon="lucide:heart"></iconify-icon>
                           <span>39</span>
                         </div>
                       </div>
@@ -147,14 +132,9 @@ const title = "Blog";
                   <!-- Content -->
                   <div class="content">
                     <div class="post-title">
-                      Featured on Bit It <span class="blog-date"
-                        >23.04.2020</span>
+                      Featured on Bit It <span class="blog-date">23.04.2020</span>
                     </div>
-                    <p>
-                      Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır
-                      metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının
-                      bir hurufat numune kitabı...
-                    </p>
+                    <p>Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı...</p>
                     <!-- Meta -->
                     <div class="post-meta">
                       <div class="author-block">
@@ -168,11 +148,11 @@ const title = "Blog";
                       </div>
                       <div class="stats-block">
                         <div class="comments">
-                          <i class="iconify" data-icon="lucide:message-circle"></i>
+                          <iconify-icon class="iconify" icon="lucide:message-circle"></iconify-icon>
                           <span>0</span>
                         </div>
                         <div class="likes">
-                          <i class="iconify" data-icon="lucide:heart"></i>
+                          <iconify-icon class="iconify" icon="lucide:heart"></iconify-icon>
                           <span>39</span>
                         </div>
                       </div>
@@ -191,14 +171,9 @@ const title = "Blog";
                   <!-- Content -->
                   <div class="content">
                     <div class="post-title">
-                      The Krypton chain algorythm <span class="blog-date"
-                        >15.04.2020</span>
+                      The Krypton chain algorythm <span class="blog-date">15.04.2020</span>
                     </div>
-                    <p>
-                      Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır
-                      metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının
-                      bir hurufat numune kitabı...
-                    </p>
+                    <p>Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı...</p>
                     <!-- Meta -->
                     <div class="post-meta">
                       <div class="author-block">
@@ -212,11 +187,11 @@ const title = "Blog";
                       </div>
                       <div class="stats-block">
                         <div class="comments">
-                          <i class="iconify" data-icon="lucide:message-circle"></i>
+                          <iconify-icon class="iconify" icon="lucide:message-circle"></iconify-icon>
                           <span>0</span>
                         </div>
                         <div class="likes">
-                          <i class="iconify" data-icon="lucide:heart"></i>
+                          <iconify-icon class="iconify" icon="lucide:heart"></iconify-icon>
                           <span>39</span>
                         </div>
                       </div>
@@ -236,14 +211,9 @@ const title = "Blog";
                   <div class="content">
                     <!--div class="rounded"></div-->
                     <div class="post-title">
-                      What is Crypto mining ? <span class="blog-date"
-                        >02.04.2020</span>
+                      What is Crypto mining ? <span class="blog-date">02.04.2020</span>
                     </div>
-                    <p>
-                      Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır
-                      metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının
-                      bir hurufat numune kitabı...
-                    </p>
+                    <p>Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı...</p>
                     <!-- Meta -->
                     <div class="post-meta">
                       <div class="author-block">
@@ -257,11 +227,11 @@ const title = "Blog";
                       </div>
                       <div class="stats-block">
                         <div class="comments">
-                          <i class="iconify" data-icon="lucide:message-circle"></i>
+                          <iconify-icon class="iconify" icon="lucide:message-circle"></iconify-icon>
                           <span>0</span>
                         </div>
                         <div class="likes">
-                          <i class="iconify" data-icon="lucide:heart"></i>
+                          <iconify-icon class="iconify" icon="lucide:heart"></iconify-icon>
                           <span>39</span>
                         </div>
                       </div>
@@ -272,10 +242,7 @@ const title = "Blog";
 
               <!-- CTA -->
               <div class="cta-wrapper has-text-centered">
-                <a
-                  href="#"
-                  class="button k-button k-primary raised has-gradient is-bold"
-                >
+                <a href="#" class="button k-button k-primary raised has-gradient is-bold">
                   <span class="text">Load More</span>
                   <span class="front-gradient"></span>
                 </a>
@@ -293,7 +260,7 @@ const title = "Blog";
                   <span class="material-highlight"></span>
                   <span class="bar"></span>
                   <label>Search articles</label>
-                  <i class="iconify" data-icon="lucide:search"></i>
+                  <iconify-icon class="iconify" icon="lucide:search"></iconify-icon>
                 </div>
               </div>
             </div>
@@ -329,13 +296,7 @@ const title = "Blog";
             <div class="archives-widget">
               <div class="widget-title">Archives</div>
               <div class="select" tabindex="1">
-                <input
-                  class="selectopt"
-                  name="test"
-                  type="radio"
-                  id="opt1"
-                  checked
-                />
+                <input class="selectopt" name="test" type="radio" id="opt1" checked />
                 <label for="opt1" class="option">Select Month</label>
                 <input class="selectopt" name="test" type="radio" id="opt2" />
                 <label for="opt2" class="option">January</label>
